# qc-bike-path

./: .pre-commit-config.yaml  README.md  copilot-instructions.md  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example  logging.yaml
docker/: Dockerfile  docker-compose.yml
issues/: fix-linting-errors.md
src/qc_bike_path/: __init__.py  config.py  extract.py  load.py  main.py  transform.py
src/qc_bike_path/utils/: __init__.py  logging.py  validators.py
tests/: __init__.py  test_extract.py  test_load.py  test_main.py  test_transform.py  test_utils.py
tests/fixtures/: __init__.py
